--- a/index.html
+++ b/index.html
@@ -476,7 +476,7 @@ https://templatemo.com/tm-562-space-dynamic
         <div class="col-lg-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.25s">
           <p>© Copyright 2023 SMD.CO All Rights Reserved.
 
-            <br>Design: <a rel="nofollow" href="https://instagram.com/sslo.co?igshid=ZDdkNTZiNTM=">Galih'S</a></p>
+            <br>Design: <a rel="nofollow" href="https://www.instagram.com/galihsslo/">Galih'S</a></p>
         </div>
       </div>
     </div>
