--- a/index.html
+++ b/index.html
@@ -97,18 +97,18 @@ https://templatemo.com/tm-562-space-dynamic
                   <span>Design</span> Marketing</h2>
                 <p>Dengan Memiliki Situs Web Terkemuka, Anda Dapat Menarik Lebih Banyak Pelanggan Dan Meningkatkan
                   Kepercayaan Mereka Pada Bisnis Anda. Kami Akan Membantu Anda Membuat Situs Web Yang Sesuai Dengan
-                  Branding Bisnis Anda Sehingga Pelanggan Dapat Dengan Mudah Mengenali Dan Mengingat Merek Anda <a </p>
-                    <!-- rel="nofollow" href="https://templatemo.com/page/1" target="_parent">TemplateMo</a>. -->
+                  Branding Bisnis Anda Sehingga Pelanggan Dapat Dengan Mudah Mengenali Dan Mengingat Merek Anda </p>
+                <!-- <a rel="nofollow" href="#" target="_parent">SMD</a>. -->
 
-                  <!-- <form id="search" action="#" method="GET">
-                  <fieldset>
-                    <input type="address" name="address" class="email" placeholder="Your website URL..."
-                      autocomplete="on" required>
-                  </fieldset>
-                  <fieldset>
-                    <button type="submit" class="main-button">Analyze Site</button>
-                  </fieldset>
-                </form> -->
+                <!-- <form id="search" action="#" method="GET">
+                    <fieldset>
+                      <input type="address" name="address" class="email" placeholder="Your website URL..."
+                        autocomplete="on" required>
+                    </fieldset>
+                    <fieldset>
+                      <button type="submit" class="main-button">Analyze Site</button>
+                    </fieldset>
+                  </form> -->
               </div>
             </div>
             <div class="col-lg-6">
