--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@ https://templatemo.com/tm-562-space-dynamic
               <div class="col-lg-10">
                 <!-- <fieldset> -->
                 <button type="submit">Send
-                  Message</button>
+                  Whatsapp</button>
 
                 <!-- </fieldset> -->
               </div>
