--- a/index.html
+++ b/index.html
@@ -428,28 +428,27 @@ https://templatemo.com/tm-562-space-dynamic
         <div class="col-lg-6 wow fadeInRight" data-wow-duration="0.5s" data-wow-delay="0.25s">
           <form id="contact" action="https://wa.me/message/JZQMDLWPRGL6C1">
             <div class="row">
-              <!-- <div class="col-lg-6">
+              <div class="col-lg-6">
                 <fieldset>
-                  <input type="name" name="name" id="name" placeholder="Name" autocomplete="on" required>
+                  <input type="name" name="name" id="name" placeholder="Name" autocomplete="on">
                 </fieldset>
               </div>
               <div class="col-lg-6">
                 <fieldset>
-                  <input type="surname" name="surname" id="surname" placeholder="Surname" autocomplete="on" required>
+                  <input type="surname" name="surname" id="surname" placeholder="Surname" autocomplete="on">
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email"
-                    required="">
+                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email"="">
                 </fieldset>
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <textarea name="message" type="text" class="form-control" id="message" placeholder="Message"
-                    required=""></textarea>
+                  <textarea name="message" type="text" class="form-control" id="message"
+                    placeholder="Message"=""></textarea>
                 </fieldset>
-              </div> -->
+              </div>
               <div class="col-lg-10">
                 <!-- <fieldset> -->
                 <button type="submit">Send
