--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@ https://templatemo.com/tm-562-space-dynamic
               </div>
               <div class="col-lg-12">
                 <fieldset>
-                  <input type="text" name="email" id="email" pattern="[^ @]*@[^ @]*" placeholder="Your Email"="">
+                  <input type="text" name="email" id="email" placeholder="Your Email">
                 </fieldset>
               </div>
               <div class="col-lg-12">
