--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
   <link rel="stylesheet" href="assets/css/owl.css">
   <!--
     
-TemplateMo 562 Space Dynamic
 
-https://templatemo.com/tm-562-space-dynamic
 
 -->
 </head>
@@ -100,15 +98,15 @@ https://templatemo.com/tm-562-space-dynamic
                   Branding Bisnis Anda Sehingga Pelanggan Dapat Dengan Mudah Mengenali Dan Mengingat Merek Anda </p>
                 <!-- <a rel="nofollow" href="#" target="_parent">SMD</a>. -->
 
-                <!-- <form id="search" action="#" method="GET">
-                    <fieldset>
-                      <input type="address" name="address" class="email" placeholder="Your website URL..."
-                        autocomplete="on" required>
-                    </fieldset>
-                    <fieldset>
-                      <button type="submit" class="main-button">Analyze Site</button>
-                    </fieldset>
-                  </form> -->
+                <form id="search" action="#" method="GET">
+                  <fieldset>
+                    <input type="address" name="address" class="email" placeholder="Your website URL..."
+                      autocomplete="on" required>
+                  </fieldset>
+                  <fieldset>
+                    <button type="submit" class="main-button">Analyze Site</button>
+                  </fieldset>
+                </form>
               </div>
             </div>
             <div class="col-lg-6">
@@ -325,7 +323,7 @@ https://templatemo.com/tm-562-space-dynamic
     </div>
   </div>
 
-  <!-- <div id="blog" class="our-blog section">
+  <div id="blog" class="our-blog section">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.25s">
@@ -342,19 +340,23 @@ https://templatemo.com/tm-562-space-dynamic
       <div class="row">
         <div class="col-lg-6 wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.25s">
           <div class="left-image">
-            <a href="#"><img src="assets/images/big-blog-thumb.jpg" alt="Workspace Desktop"></a>
+            <a href="https://github.com/galihs12/sip_web.git"><img src="assets/images/a.jpg"
+                alt="Workspace Desktop"></a>
             <div class="info">
               <div class="inner-content">
                 <ul>
-                  <li><i class="fa fa-calendar"></i> 24 Mar 2021</li>
-                  <li><i class="fa fa-users"></i> TemplateMo</li>
+                  <li><i class="fa fa-calendar"></i> 24 Des 2021</li>
+                  <li><i class="fa fa-users"></i> SMD.CO</li>
                   <li><i class="fa fa-folder"></i> Branding</li>
                 </ul>
-                <a href="#">
-                  <h4>SEO Agency &amp; Digital Marketing</h4>
+                <a href="https://github.com/galihs12/sip_web.git">
+                  <h4>SIP &amp; Digital Marketing</h4>
                 </a>
-                <p>Lorem ipsum dolor sit amet, consectetur and sed doer ket eismod tempor incididunt ut labore et dolore
-                  magna...</p>
+                <p>Aplikasi Kasir dengan Integrasi Pembayaran <br>
+                  Aplikasi ini memungkinkan pengguna untuk melakukan pembayaran dengan berbagai metode, seperti kartu
+                  kredit, transfer bank, dan pembayaran digital. Fitur ini memudahkan pelanggan untuk melakukan
+                  pembayaran dan mengurangi waktu yang dibutuhkan untuk memproses pembayaran. Selain itu, aplikasi ini
+                  juga dilengkapi dengan fitur manajemen stok, manajemen pelanggan, dan laporan keuangan.</p>
                 <div class="main-blue-button">
                   <a href="#">Discover More</a>
                 </div>
@@ -367,14 +369,14 @@ https://templatemo.com/tm-562-space-dynamic
             <ul>
               <li>
                 <div class="left-content align-self-center">
-                  <span><i class="fa fa-calendar"></i> 18 Mar 2021</span>
-                  <a href="#">
-                    <h4>New Websites &amp; Backlinks</h4>
+                  <span><i class="fa fa-calendar"></i> 18 Jan 2021</span>
+                  <a href="https://galihs12.github.io/GalihS/">
+                    <h4>New Websites &amp; Portfolio</h4>
                   </a>
-                  <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
+                  <p>Aplikasi ini dilengkapi dengan fitur analisis kinerja pada halaman portofolio mereka.</p>
                 </div>
                 <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
+                  <a href="https://galihs12.github.io/GalihS/"><img src="assets/images/b.jpg" alt=""></a>
                 </div>
               </li>
               <li>
@@ -406,7 +408,7 @@ https://templatemo.com/tm-562-space-dynamic
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
   <div id="contact" class="contact-us section">
     <div class="container">
