--- a/index.html
+++ b/index.html
@@ -385,10 +385,10 @@
                   <a href="#">
                     <h4>SEO Analysis &amp; Content Ideas</h4>
                   </a>
-                  <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
+                  <p>Membantu pengguna untuk memeriksa kinerja website mereka di mesin pencari. </p>
                 </div>
                 <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
+                  <a href="#"><img src="assets/images/banner-right-image1.png" alt=""></a>
                 </div>
               </li>
               <li>
@@ -397,10 +397,11 @@
                   <a href="#">
                     <h4>SEO Tips &amp; Digital Marketing</h4>
                   </a>
-                  <p>Lorem ipsum dolor sit amsecteturii and sed doer ket eismod...</p>
+                  <p>Konten yang berkualitas tinggi dapat membantu meningkatkan kinerja SEO Anda dan membuat pengguna
+                    terus kembali ke situs Anda. Pastikan konten Anda informatif, relevan, dan mudah dipahami.</p>
                 </div>
                 <div class="right-image">
-                  <a href="#"><img src="assets/images/blog-thumb-01.jpg" alt=""></a>
+                  <a href="#"><img src="assets/images/big-blog-thumb.jpg" alt=""></a>
                 </div>
               </li>
             </ul>
